infrastructure/longhorn/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-basic-auth
